--- a/package.json
+++ b/package.json
@@ -1,26 +1,19 @@
 {
-  "name": "33-state-4",
+  "name": "csr",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "next build; next start",
+    "start": "next start"
   },
   "dependencies": {
-    "@mdx-js/loader": "^2.0.0",
-    "@next/mdx": "^12.0.10",
-    "cypress": "^10.3.0",
-    "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.2",
-    "autoprefixer": "^10.4.2",
-    "eslint": "8.9.0",
-    "eslint-config-next": "12.0.10",
-    "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.22"
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "next": "9.3.6",
+    "react": "16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-dom": "16.13.1",
+    "react-query": "^1.2.9"
   }
 }
