--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@mdx-js/loader": "^2.0.0",
     "@next/mdx": "^12.0.10",
-    "next": "12.0.10",
+    "next": "^12.3.1",
     "randomcolor": "^0.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
