--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@next/mdx": "^12.0.10",
     "next": "^14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-player": "^2.15.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
